--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,8 @@
   "compilerOptions": {
     "target": "ES2019",
     "paths": {
-      "lexical": ["./packages/lexical/src/index.ts"]
+      "lexical": ["./packages/lexical/src/index.ts"],
+      "shared/invariant": ["./packages/shared/src/invariant.ts"]
     }
   }
 }
